--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,6 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       - image: circleci/node:13.8.0
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run: npm i
@@ -32,7 +30,7 @@ jobs:
       - run: npm i
       - run: npm audit  
 workflows:
-  say-hello-workflow:
+  my-workflow:
     jobs:
       - build
       - test:
