--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,30 +2,37 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   build:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run: npm i
       - run: npm run lint
+        
   test:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - checkout
       - run: npm i
-      - run: npm run test
+      - run: npm run test   
   analyze:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - run: npm audit
-
+      - run: npm i
+      - run: npm audit  
 workflows:
-  my_workflow:
+  say-hello-workflow:
     jobs:
       - build
       - test:
@@ -33,4 +40,4 @@ workflows:
             - build
       - analyze:
           requires:
-            - test 
+            - test      
