--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      - run: npm i
-      - run: npm run lint
+      - run: npm-run i
+      - run: npm-run lint
         
   test:
     docker:
