--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: circleci/node:8.0.0
+      - image: circleci/node
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
@@ -19,14 +19,14 @@ jobs:
         
   test:
     docker:
-      - image: circleci/node:8.0.0
+      - image: circleci/node
     steps:
       - checkout
       - run: npm i
       - run: npm run test   
   analyze:
     docker:
-      - image: circleci/node:8.0.0
+      - image: circleci/node
     steps:
       - checkout
       - run: npm i
